# niricfg

./: Containerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: main.py  monitor.py  settingspanel.py
