[project]
name = "niricfg"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.81.0",
    "kdl-py==1.2.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop-light>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "codes.eeems"
product = "niricfg"
company = "Eeems"
copyright = "Copyright (C) 2026 by Eeems"

[tool.flet.app]
path = "src"
